# cmake-demo

./: README.md
src/: CMakeLists.txt  demo.h.in  main.cpp
